--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -23,7 +23,7 @@ jobs:
           sudo -E apt-get -qq install jq
           export QUREY_PARAMS="?page_size=2&page=1&ordering=last_updated"
           export LATEST_TAG=$(echo -n $(curl -s "https://hub.docker.com/v2/repositories/${DOCKER_REPO_NAME}/tags/${QUREY_PARAMS}" | jq -r '.results | sort_by(.name) | first | .name'))
-          export RSSHUB_VERSION=$(echo -n $(date -d@$(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s 'https://api.github.com/repos/RookieZoe/RSSHub/commits?sha=selfhost' | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate') +'%y.%m.%d'))
+          export RSSHUB_VERSION=$(echo -n $(date -d@$(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s 'https://api.github.com/repos/DIYgod/RSSHub/commits?sha=master' | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate') +'%y.%m.%d'))
           echo ::set-output name=LATEST_TAG::$LATEST_TAG
           echo ::set-output name=RSSHUB_VERSION::$RSSHUB_VERSION
 
@@ -37,7 +37,7 @@ jobs:
         run: |
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install git
-          git clone -b selfhost --single-branch https://github.com/RookieZoe/RSSHub.git $GITHUB_WORKSPACE/rsshub/RSSHub
+          git clone -b master --single-branch https://github.com/DIYgod/RSSHub.git $GITHUB_WORKSPACE/rsshub/RSSHub
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
