--- a/.github/workflows/del-runs-and-releases.yml
+++ b/.github/workflows/del-runs-and-releases.yml
@@ -7,7 +7,7 @@ on:
       retain_days:
         description: 'Number of days:'
         required: true
-        default: 0
+        default: '0'
 
 jobs:
   del_runs:
