--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -1,4 +1,5 @@
 name: nginx-alpine
+
 on:
   schedule:
     - cron: '0 0 * * *'
@@ -50,28 +51,45 @@ jobs:
           echo "HEADERS_MORE_TAR=$HEADERS_MORE_TAR" >> $GITHUB_OUTPUT
           echo "HEADERS_MORE_VERSION=$HEADERS_MORE_VERSION" >> $GITHUB_OUTPUT
 
-  publish:
+  docker:
     if: needs.get_env.outputs.LATEST_TAG != needs.get_env.outputs.NGINX_VERSION
     runs-on: ubuntu-latest
     needs: get_env
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.DOCKER_REPO_NAME }}
+          tags: |
+            type=raw,value=latest
+            type=raw,value=${{ needs.get_env.outputs.NGINX_VERSION }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      - name: Login to DockerHub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Publish to DockerHub
+
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          push: true
-          tags: ${{ env.DOCKER_REPO_NAME }}:latest,${{ env.DOCKER_REPO_NAME }}:${{ needs.get_env.outputs.NGINX_VERSION }}
           context: ./nginx
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           build-args: |
             NGINX_VERSION=${{ needs.get_env.outputs.NGINX_VERSION }}
             NCHAN_VERSION=${{ needs.get_env.outputs.NCHAN_VERSION }}
