--- a/.github/workflows/xray-alpine.yml
+++ b/.github/workflows/xray-alpine.yml
@@ -24,12 +24,12 @@ jobs:
           sudo -E apt-get -qq install jq
           export QUREY_PARAMS="?page_size=2&page=1&ordering=last_updated"
           export LATEST_TAG=$(echo -n $(curl -s "https://hub.docker.com/v2/repositories/${DOCKER_REPO_NAME}/tags/${QUREY_PARAMS}" | jq -r '.results | sort_by(.name) | first | .name'))
-          export XRAY_VERSION=$(echo -n $(curl -s https://api.github.com/repos/XTLS/Xray-core/releases | jq -r 'sort_by(.published_at) | last | .tag_name' | awk -Fv '{print $2}'))
+          export XRAY_VERSION=$(curl -sL https://api.github.com/repos/XTLS/Xray-core/tags | grep '"name"' | head -1 | sed -E 's/.*"v([^"]+)".*/\1/')
           echo "LATEST_TAG=$LATEST_TAG" >> $GITHUB_OUTPUT
           echo "XRAY_VERSION=$XRAY_VERSION" >> $GITHUB_OUTPUT
 
   docker:
-    if: needs.get_env.outputs.LATEST_TAG != needs.get_env.outputs.XRAY_VERSION
+    if: needs.get_env.outputs.LATEST_TAG != needs.get_env.outputs.XRAY_VERSION && needs.get_env.outputs.XRAY_VERSION != ''
     runs-on: ubuntu-latest
     needs: get_env
     steps:
