--- a/caddy/Dockerfile
+++ b/caddy/Dockerfile
@@ -6,7 +6,12 @@ RUN xcaddy build \
   --with github.com/mholt/caddy-l4 \
   --with github.com/WeidiDeng/caddy-cloudflare-ip \
   --with github.com/fvbommel/caddy-dns-ip-range \
-  --with github.com/fvbommel/caddy-combine-ip-ranges
+  --with github.com/fvbommel/caddy-combine-ip-ranges \
+  --with github.com/caddy-dns/alidns \
+  --with github.com/caddy-dns/cloudflare \
+  --with github.com/caddy-dns/tencentcloud \
+  --with github.com/caddy-dns/huaweicloud \
+  --with github.com/caddy-dns/spaceship
 
 FROM caddy:${CADDY_VERSION}-alpine
 
