[caddy, nginx, xray] remove target "i386, arm/v6, arm/v7, ppc64le, s390x"

--- a/.github/workflows/caddy-alpine.yml
+++ b/.github/workflows/caddy-alpine.yml
@@ -61,7 +61,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./caddy
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/riscv64,linux/s390x
+          platforms: linux/amd64,linux/arm64,linux/riscv64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
